--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <script defer type="text/javascript" src={"js/pngfix.js"|ezdesign}></script>
         <![endif]-->
 
-  <title>Gassmagasinet</title>
+  <title>Gassmagasinet.no</title>
 </head>
 
 <body>
