--- a/index.html
+++ b/index.html
@@ -525,38 +525,16 @@
         </div>
 
         <div class="box clearfix">
-          <h2>Produkter</h2>
+          <h2>Lenker</h2>
           <div class="shaddow"></div>
 
           <div class="box-content">
-            <div class="padder">
-              <div class="article-intro clearfix">
-                <img src="http://GMimg.no.publicus.com/apps/pbcsi.dll/bilde?Site=GM&amp;Date=20101103&amp;Category=NYHETER&amp;ArtNo=101109996&amp;Ref=AR&amp;MaxW=100" class="fl" />
-
-                <h3><a href="/article/20101103/NYHETER/101109996/1034&amp;ExpNodes=1001">Varmepumpe på gass</a></h3>
-
-                <p><span class="faded">03.11.10</span> Norborn melder om store fordeler med gassdrevne varmepumper.</p>
-              </div>
-
-              <div class="line"></div>
-
-              <div class="article-intro clearfix">
-                <img src="http://GMimg.no.publicus.com/apps/pbcsi.dll/bilde?Site=GM&amp;Date=20101025&amp;Category=NYHETER&amp;ArtNo=101029995&amp;Ref=AR&amp;MaxW=100" class="fl" />
-
-                <h3><a href="/article/20101025/NYHETER/101029995/1034&amp;ExpNodes=1001">Nytt utstyr for biogass</a></h3>
-
-                <p><span class="faded">25.10.10</span> Nessco lanserer kompressorer og blåsemaskiner for biogass.</p>
-              </div>
-
-              <div class="line"></div>
-
-              <div class="article-intro clearfix">
-                <img src="http://GMimg.no.publicus.com/apps/pbcsi.dll/bilde?Site=GM&amp;Date=20101019&amp;Category=NYHETER&amp;ArtNo=101019990&amp;Ref=AR&amp;MaxW=100" class="fl" />
-
-                <h3><a href="/article/20101019/NYHETER/101019990/1034&amp;ExpNodes=1001">Nexans-avtale med BP</a></h3>
-
-                <p><span class="faded">19.10.10</span> Nexans skal levere undersjøiske umbilicals til gassfelt i Nordsjøen.</p>
-              </div>
+            <div class="padder links">
+              <ul>
+                <li><a class="arrow" href="#">her kommer lenker</a></li>
+                <li><a class="arrow" href="#">her kommer lenker</a></li>
+                <li><a class="arrow" href="#">her kommer lenker</a></li>
+                <li><a class="arrow" href="#">her kommer lenker</a></li>
 
               <div class="line"></div>
               <a class="arrow" href="/section/produkter/1034&amp;ExpNodes=1034">Se flere produkter</a>
