--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
         </div>
 
         <div class="box clearfix">
-          <h2>Lenker - TEST</h2>
+          <h2>Lenker</h2>
           <div class="shaddow"></div>
 
           <div class="box-content">
@@ -535,9 +535,6 @@
                 <li><a class="arrow" href="#">her kommer lenker</a></li>
                 <li><a class="arrow" href="#">her kommer lenker</a></li>
                 <li><a class="arrow" href="#">her kommer lenker</a></li>
-
-              <div class="line"></div>
-              <a class="arrow" href="/section/produkter/1034&amp;ExpNodes=1034">Se flere produkter</a>
             </div>
           </div>
         </div>
